# GiftTap

./: .gitignore  Anchor.toml  Cargo.toml  index.html  main.jsx  package-lock.json  package.json  postcss.config.js  tailwind.config.js  vite.config.js  vite.config.ts
.vercel/: project.json
gift_memecoin/programs/gift_staking/: Cargo.toml
gift_memecoin/src/: config.js  idl.ts  index.css  pollyfills.ts  tsconfig.json
programs/gift_staking/: Cargo.toml
programs/gift_staking/src/: lib.rs
src/: App.jsx  DailyGiftBox.jsx  config.js  get_pda.ts  idl.ts  index.css  package.json  tsconfig.json
src/components/TapGame/: GiftTap.jsx  Upgrades.jsx  index.html  package-lock.json  package.json
src/components/TapGame/src/: App.jsx  GiftTap.jsx  index.css  supabaseClient.js
src/tests/: gift_staking.ts
test-ledger/: faucet-keypair.json  genesis.tar.bz2  snapshot-600-89p18N4KvAGBjFtcjcRVi9yBR7xa2W3RHro7Bwpsxr9r.tar.zst  snapshot-700-EpTDCJGwUyGV86A7gcknzRtjtwypxGMWuDkpcWdS7DMw.tar.zst  stake-account-keypair.json  validator-keypair.json  vote-account-keypair.json
test-ledger/accounts/run/: 0.1  500.6  700.8
test-ledger/accounts/snapshot/700/: 600.7
test-ledger/rocksdb/: 000014.sst  000015.sst  000016.sst  000017.sst  000018.sst  000019.sst  IDENTITY  LOG  LOG.old.1769998297060840  MANIFEST-000021
test-ledger/snapshots/700/: 700  status_cache
